# Hoki

./: .python-version  compare_sg.py  delta.py  delta_alta.py  delta_gpt.py  delta_original.py  gpt_diff.py  ideal_scenegraph.json  merged_scenegraph.py  planner.py  planner2.py  real_merged.json  real_scenegraph.json  sas_plan  scene_graph_diff.py
occ_vla/: .gitignore  README.md  pyproject.toml
occ_vla/configs/: default.yaml
occ_vla/configs/control_backbone/: pi05.yaml
occ_vla/configs/eval/: libero_occ.yaml
occ_vla/configs/pklp/: pklp.yaml
occ_vla/configs/world_model/: mmada.yaml
occ_vla/scripts/: _download_mmada.py  _download_pi05.py  analyze_action_manifold.py  bestofn_score_distribution.py  calibrate_plausibility.py  collect_action_manifold_data.py  collect_arm_removal_pairs.py  collect_arm_removal_pairs_policy.py  collect_dense_occlusion_frames.py  collect_grounded_holdout_frames.py  collect_mask_area_frames.py  collect_multiview_data.py  collect_occlusion_moment_with_state.py  compute_trajectory_metrics.py  diagnose_blend_vector_conflict.py  diagnose_dust3r_color_source.py  diagnose_ep7_loop.py  eval_lambda10_smoke_visual.py  eval_libero_occ.py  generate_grounded_collage.py  generate_recovery_for_injection_test.py  generate_vs_inpaint.py  preview_subgoal_mode.py  probe_pklp_mmada_collage.py  probe_texture_ceiling.py  prototype_pixel_to_action.py  record_action_blending_videos.py  record_occlusion_strip.py  record_qualitative_videos.py  run_action_blending_pipeline.py  run_bbox_tracking_sanity.py  run_demo.py  run_demo_comparison.py  run_demo_mechanism.py  run_demo_t08.py  run_hybrid_gate_injection_pipeline.py  run_moka_pots_fk_occlusion.py  run_parallel_conditions.py  run_pi05_injection_welch_test.py  run_pi05_sd_style_comparison.py  (+39 more)
occ_vla/scripts/_workers/: mmada_worker.py  mmada_worker_lora.py  rpc.py  (+4 more)
(+148 files in other folders)
